tests/src/snapshots/fe_compiler_tests__compile_errors__invalid_contract_field.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(&path, &src)"

---
error: Invalid attempt to access contract field
  ┌─ fixtures/compile_errors/invalid_contract_field.fe:5:10
  │
5 │     self.bar
  │          ^^^ Not a valid contract field


